# auto-brightness-demo

./: Cargo.toml
qml/: settingswindow.qml  settingswindow.qrc
src/: build.rs  main.rs
src/brightness_calc/: mod.rs
src/camera/: mod.rs
src/daemon/: mod.rs
src/gui/: mod.rs
src/gui/settingswindow/: mod.rs
src/math/: mod.rs
src/signals/: mod.rs
